<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            style="@style/layout"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:text="Test Your Skills"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="italic|bold" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Enter Your Information before start:"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                style="@style/layout2"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Name: "
                android:textSize="14sp" />

            <EditText
                android:id="@+id/name_view"
                style="@style/layout2"
                android:layout_weight="6"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idno"
                style="@style/layout2"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Id: "
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_data"
                style="@style/layout2"
                android:layout_weight="6"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                style="@style/layout2"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Email: "
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email_data"
                style="@style/layout2"
                android:layout_weight="6"
                android:inputType="text" />

        </LinearLayout>

        <TextView
            style="@style/Qslayout"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/rgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/radiobutton"
                android:onClick="Q1_radio"
                android:text=" -128 to 127" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/radiobutton"
                android:onClick="Q1_radio"
                android:text="-32768 to 32767" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/radiobutton"
                android:onClick="Q1_radio"
                android:text=" -2147483648 to 2147483647" />

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/radiobutton"
                android:onClick="Q1_radio"
                android:text=" None of the mentioned" />
        </RadioGroup>

        <TextView
            style="@style/Qslayout"
            android:text="@string/question2" />

        <CheckBox
            android:id="@+id/notify_me_checkbox1"
            style="@style/checkbox"
            android:text="@string/question1_ans1" />

        <CheckBox
            android:id="@+id/notify_me_checkbox2"
            style="@style/checkbox"
            android:text="@string/question1_ans2" />

        <CheckBox
            android:id="@+id/notify_me_checkbox3"
            style="@style/checkbox"
            android:text="@string/question1_ans3" />

        <CheckBox
            android:id="@+id/notify_me_checkbox4"
            style="@style/checkbox"
            android:text="@string/question1_ans4" />

        <TextView
            style="@style/Qslayout"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/rgroupQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonq1"
                style="@style/radiobutton"
                android:onClick="Q3_radio"
                android:text=" 1 and 2" />

            <RadioButton
                android:id="@+id/radioButtonq2"
                style="@style/radiobutton"
                android:onClick="Q3_radio"
                android:text=" 2 and 3" />

            <RadioButton
                android:id="@+id/radioButtonq3"
                style="@style/radiobutton"
                android:onClick="Q3_radio"
                android:text=" 3 and 4" />

            <RadioButton
                android:id="@+id/radioButtonq4"
                style="@style/radiobutton"
                android:onClick="Q3_radio"
                android:text="All statements are correct" />
        </RadioGroup>

        <TextView
            style="@style/Qslayout"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/output_ans_Q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />


        <Button
            android:id="@+id/submit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="show_result"
            android:text="Result" />

        <TextView
            android:id="@+id/output"
            style="@style/Qslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="output"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>